# django-rainbowtests

./: AGENTS.md  AUTHORS.md  AUTHORS.rst  LICENSE.md  MANIFEST.in  PLAN.md  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
rainbowtests/: __init__.py  colors.py  messages.py  tests.py
rainbowtests/test/: core.py  runner.py  simple.py
tests/: conftest.py  test_colors.py  test_core.py  test_messages.py  test_runner.py
